# nodelet_demo

./: README.md
.github/workflows/: main.yml  ubuntu_20_04.yml
nodelet_demo/: CMakeLists.txt  nodelet_demo.xml  package.xml
nodelet_demo/include/nodelet_demo/: nodelet_demo.h  utility.h
nodelet_demo/launch/: demo.launch
nodelet_demo/scripts/: gen_input.py
nodelet_demo/src/: nodelet_demo.cpp  nodelet_demo_node.cpp  utility.cpp
